# Flask_Blogm

./:  README.md  README.md  bash_profile.env  flaskblog.py  requirements.txt  run.py
blogm/: pyproject.toml
flaskblog/: __init__.py  config.py  form.py  models.py  routes.py
flaskblog/errors/: handlers.py
flaskblog/main/: routes.py
flaskblog/posts/: forms.py  routes.py
flaskblog/static/: main.css
flaskblog/templates/: Account.html  Login.html  create_post.html  home.html  layout.html  post.html  register.html  reset_request.html  reset_token.html  user_post.html
flaskblog/templates/errors/: 403.html  404.html  500.html
flaskblog/users/: forms.py  routes.py  utils.py
instance/: bash_profile  site.db
templates/: Login.html  about.html  home.html  layout.html  register.html
